IWS_1st/IWS/API/Litecad.h

typedef void (CALLBACK* F_LCEVENT) (HANDLE hEvent);
void LCAPI lcEventSetProc (int EventType, F_LCEVENT pFunc, int Prm1, HANDLE Prm2);
void LCAPI lcEventReturnCode (int code);
BOOL LCAPI lcEventsEnable (BOOL b);
// Initialization
BOOL    LCAPI lcInitialize    ();
BOOL    LCAPI lcUninitialize  (BOOL bSaveConfig);
// GUI strings
BOOL    LCAPI lcStrAdd        (LPCWSTR szTag, LPCWSTR szText);
 
BOOL    LCAPI lcStrSet        (LPCWSTR szTag, LPCWSTR szText);
LPCWSTR LCAPI lcStrGet        (LPCWSTR szTag);
                   
BOOL    LCAPI lcStrFileLoad   (LPCWSTR szFileName);
BOOL    LCAPI lcStrFileSave   (LPCWSTR szFileName, LPCWSTR szLanguage);
 

// Objects properties
BOOL    LCAPI lcPropGetBool   (HANDLE hObject, int idProp);
int     LCAPI lcPropGetInt    (HANDLE hObject, int idProp);
double  LCAPI lcPropGetFloat  (HANDLE hObject, int idProp);
LPCWSTR LCAPI lcPropGetStr    (HANDLE hObject, int idProp);
int     LCAPI lcPropGetStr2   (HANDLE hObject, int idProp);
int     LCAPI lcPropGetChar   (int iChar);
HANDLE  LCAPI lcPropGetHandle (HANDLE hObject, int idProp);
BOOL    LCAPI lcPropPutBool   (HANDLE hObject, int idProp, BOOL bValue);
BOOL    LCAPI lcPropPutInt    (HANDLE hObject, int idProp, int Value);
BOOL    LCAPI lcPropPutFloat  (HANDLE hObject, int idProp, double Value);
BOOL    LCAPI lcPropPutStr    (HANDLE hObject, int idProp, LPCWSTR szValue);
BOOL    LCAPI lcPropPutHandle (HANDLE hObject, int idProp, HANDLE hValue);
// Design window
HANDLE LCAPI lcCreateWindow      (HWND hWndParent, int Style);
BOOL   LCAPI lcDeleteWindow      (HANDLE hLcWnd);
BOOL   LCAPI lcWndResize         (HANDLE hLcWnd, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcWndRedraw         (HANDLE hLcWnd);
BOOL   LCAPI lcWndSetFocus       (HANDLE hLcWnd);
BOOL   LCAPI lcWndSetExtents     (HANDLE hLcWnd, double Xmin, double Ymin, double Xmax, double Ymax);
BOOL   LCAPI lcWndZoomRect       (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top);
BOOL   LCAPI lcWndZoomScale      (HANDLE hLcWnd, double Scal);
BOOL   LCAPI lcWndZoomMove       (HANDLE hLcWnd, double DX, double DY);
BOOL   LCAPI lcWndZoomPos        (HANDLE hLcWnd, double Xc, double Yc, double PixSize);
BOOL   LCAPI lcWndGetCursorCoord (HANDLE hLcWnd, int* pXwin, int* pYwin, double* pXdrw, double* pYdrw);
BOOL   LCAPI lcWndExeCommand     (HANDLE hLcWnd, int Command, int CmdParam);
BOOL   LCAPI lcWndOnClose        (HANDLE hLcWnd);
BOOL   LCAPI lcWndSetBlock       (HANDLE hLcWnd, HANDLE hBlock);
BOOL   LCAPI lcWndSetProps       (HANDLE hLcWnd, HANDLE hPropWnd);
BOOL   LCAPI lcWndSetCmdwin      (HANDLE hLcWnd, HANDLE hCmdLine);
BOOL   LCAPI lcWndSetBasePoint   (HANDLE hLcWnd, BOOL bState, double X, double Y);
HANDLE LCAPI lcWndGetEntByPoint  (HANDLE hLcWnd, int Xwin, int Ywin);
HANDLE LCAPI lcWndGetEntByPoint2 (HANDLE hLcWnd, double X, double Y, double Delta);
int    LCAPI lcWndGetEntsByPoint (HANDLE hLcWnd, int Xwin, int Ywin, int nMaxEnts);
int    LCAPI lcWndGetEntsByRect  (HANDLE hLcWnd, double Lef, double Bot, double Rig, double Top, BOOL bCross, int nMaxEnts);
HANDLE LCAPI lcWndGetEntity      (int iEnt);
HANDLE LCAPI lcWndGetEntByID     (HANDLE hLcWnd, int Id);
HANDLE LCAPI lcWndGetEntByIDH    (HANDLE hLcWnd, LPCWSTR szId);
HANDLE LCAPI lcWndGetEntByKey    (HANDLE hLcWnd, int Key);
BOOL   LCAPI lcWndEmulator       (HANDLE hLcWnd, int Mode);
BOOL   LCAPI lcWndMagnifier      (HANDLE hLcWnd, BOOL bOn, int Width, int Height, int Zoom, int Flags);
BOOL   LCAPI lcWndHoverText      (HANDLE hLcWnd, LPCWSTR szText, int X, int Y, int Align);
int    LCAPI lcWndMessage        (HANDLE hLcWnd, LPCWSTR szText, int uType);
// Coordinate convertions
BOOL   LCAPI lcWndCoordFromDrw   (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);
BOOL   LCAPI lcWndCoordToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);
BOOL   LCAPI lcCoordDrwToWnd     (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwnd, int* pYwnd);
BOOL   LCAPI lcCoordWndToDrw     (HANDLE hLcWnd, int Xwnd, int Ywnd, double* pXdrw, double* pYdrw);
// Font functions
HANDLE  LCAPI lcFontGetFirst ();
HANDLE  LCAPI lcFontGetNext  (HANDLE hFont);
HANDLE  LCAPI lcFontAddRes   (LPCWSTR szFontName, HANDLE hModule, int idResource);
HANDLE  LCAPI lcFontAddFile  (LPCWSTR szFontName, LPCWSTR szFilename);
HANDLE  LCAPI lcFontAddBin   (LPCWSTR szFontName, HANDLE hData);
HANDLE  LCAPI lcFontGetChar  (HANDLE hFont, int CharCode);
LPCWSTR LCAPI lcFontGetName  (LPCWSTR szFilename);
// Progress indicator
BOOL   LCAPI lcProgressCreate  (HANDLE hLcWnd, int W, int H, LPCWSTR szTitle);
BOOL   LCAPI lcProgressSetText (LPCWSTR szText);
BOOL   LCAPI lcProgressStart   (int MinVal, int MaxVal);
BOOL   LCAPI lcProgressSetPos  (int Val);
BOOL   LCAPI lcProgressInc     ();
BOOL   LCAPI lcProgressDelete  ();
// Quadrangle point coordinates
HANDLE LCAPI lcQuadCreate      ();
BOOL   LCAPI lcQuadDelete      (HANDLE hQuad);
BOOL   LCAPI lcQuadSet         (HANDLE hQuad, double x0, double y0, double x1, double y1, double x2, double y2, double x3, double y3);
BOOL   LCAPI lcQuadTransXYtoUV (HANDLE hQuad, double X, double Y, double* pU, double* pV);
BOOL   LCAPI lcQuadTransUVtoXY (HANDLE hQuad, double U, double V, double* pX, double* pY);
BOOL   LCAPI lcQuadContains    (HANDLE hQuad, double X, double Y);
// Array of Quadrangles
HANDLE LCAPI lcGridCreate  ();
BOOL   LCAPI lcGridDelete  (HANDLE hGrid);
BOOL   LCAPI lcGridSet     (HANDLE hGrid, double X0, double Y0, double W, double H, int Nx, int Ny);
BOOL   LCAPI lcGridSetDest (HANDLE hGrid, int Ix, int Iy, double X, double Y);
BOOL   LCAPI lcGridUpdate  (HANDLE hGrid);
BOOL   LCAPI lcGridTrans   (HANDLE hGrid, double X, double Y, double* pXdest, double* pYdest);
BOOL   LCAPI lcGridGetNode (HANDLE hGrid, BOOL bDest, int Ix, int Iy, double* pX, double* pY);
BOOL   LCAPI lcGridGetCell (HANDLE hGrid, double X, double Y, int* pIx, int* pIy);
BOOL   LCAPI lcGridSetView (HANDLE hGrid, int Mode, HANDLE hLcWnd, COLORREF ColLine, COLORREF ColNode);  // Mode: 0-disable, 1-original, 2-destination
// TIN object (also LC_PROP_TIN_FILENAME and others)
BOOL   LCAPI lcTIN_Clear         ();
BOOL   LCAPI lcTIN_FileLoad      (LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcTIN_FileSave      (LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcTIN_Update        ();
HANDLE LCAPI lcTIN_AddPoint      (double X, double Y, double Z);
HANDLE LCAPI lcTIN_AddPoint2     (double X, double Y, double Z, LPCWSTR szName, LPCWSTR szDescr, int iColor);
int    LCAPI lcTIN_LoadPoints    (LPCWSTR szFileName, HANDLE hLcWnd);
int    LCAPI lcTIN_DelDupPoints  (double Delta);
BOOL   LCAPI lcTIN_DelPoint      (HANDLE hPnt);
HANDLE LCAPI lcTIN_GetFirstPoint ();
HANDLE LCAPI lcTIN_GetNextPoint  (HANDLE hPnt);
HANDLE LCAPI lcTIN_AddTrian      (HANDLE hPnt1, HANDLE hPnt2, HANDLE hPnt3);
BOOL   LCAPI lcTIN_DelTrian      (HANDLE hTrian);
HANDLE LCAPI lcTIN_GetFirstTrian ();
HANDLE LCAPI lcTIN_GetNextTrian  (HANDLE hTrian);
BOOL   LCAPI lcTIN_NormTrians    ();
BOOL   LCAPI lcTIN_Triangulate   ();  // LC_CMD_TIN_BNDTRANG
BOOL   LCAPI lcTIN_BndClear      ();
BOOL   LCAPI lcTIN_BndAuto       (double MaxDist, HANDLE hLcWnd);
BOOL   LCAPI lcTIN_BndAddPoint   (HANDLE hPnt);
BOOL   LCAPI lcTIN_BndUpdate     ();
HANDLE LCAPI lcTIN_BndGetPoint   (int iPnt);
BOOL   LCAPI lcTIN_BndFileSave   (LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcTIN_GetZ          (double X, double Y, double* pZ);
int    LCAPI lcTIN_InterLine     (double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcTIN_InterGetPoint (int iPnt, double* pX, double* pY, double* pZ);
HANDLE LCAPI lcTIN_GetNearPoint  (double X, double Y);
int    LCAPI lcTIN_GenIsolines    ();