IWS_1st_No2DInsp/IWS/API/Litecad.pas


Procedure lcEventSetProc (EventType: Integer; pFunc: Pointer; Prm1: Integer; Prm2: IntPtr); stdcall; external 'Litecad64.dll';
Procedure lcEventReturnCode (code: Integer); stdcall; external 'Litecad64.dll';
Function lcEventsEnable (b: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcInitialize : Integer; stdcall; external 'Litecad64.dll';
Function lcUninitialize (bSaveConfig: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcStrAdd (szTag: PWideChar; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcStrSet (szTag: PWideChar; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcStrGet (szTag: PWideChar): PWideChar; stdcall; external 'Litecad64.dll';
Function lcStrFileLoad (szFileName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcStrFileSave (szFileName: PWideChar; szLanguage: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPropGetBool (hObject: IntPtr; idProp: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropGetInt (hObject: IntPtr; idProp: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropGetFloat (hObject: IntPtr; idProp: Integer): Double; stdcall; external 'Litecad64.dll';
Function lcPropGetStr (hObject: IntPtr; idProp: Integer): PWideChar; stdcall; external 'Litecad64.dll';
Function lcPropGetStr2 (hObject: IntPtr; idProp: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropGetChar (iChar: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropGetHandle (hObject: IntPtr; idProp: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPropPutBool (hObject: IntPtr; idProp: Integer; bValue: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropPutInt (hObject: IntPtr; idProp: Integer; Value: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropPutFloat (hObject: IntPtr; idProp: Integer; Value: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPropPutStr (hObject: IntPtr; idProp: Integer; szValue: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPropPutHandle (hObject: IntPtr; idProp: Integer; hValue: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcCreateWindow (hWndParent: IntPtr; Style: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDeleteWindow (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndResize (hLcWnd: IntPtr; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndRedraw (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndSetFocus (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndSetExtents (hLcWnd: IntPtr; Xmin: Double; Ymin: Double; Xmax: Double; Ymax: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndZoomRect (hLcWnd: IntPtr; Left: Double; Bottom: Double; Right: Double; Top: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndZoomScale (hLcWnd: IntPtr; Scal: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndZoomMove (hLcWnd: IntPtr; DX: Double; DY: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndZoomPos (hLcWnd: IntPtr; Xc: Double; Yc: Double; PixSize: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndGetCursorCoord (hLcWnd: IntPtr; pXwin: Pinteger; pYwin: Pinteger; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcWndExeCommand (hLcWnd: IntPtr; Command: Integer; CmdParam: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndOnClose (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndSetBlock (hLcWnd: IntPtr; hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndSetProps (hLcWnd: IntPtr; hPropWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndSetCmdwin (hLcWnd: IntPtr; hCmdLine: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndSetBasePoint (hLcWnd: IntPtr; bState: Integer; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndGetEntByPoint (hLcWnd: IntPtr; Xwin: Integer; Ywin: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcWndGetEntByPoint2 (hLcWnd: IntPtr; X: Double; Y: Double; Delta: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcWndGetEntsByPoint (hLcWnd: IntPtr; Xwin: Integer; Ywin: Integer; nMaxEnts: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndGetEntsByRect (hLcWnd: IntPtr; Lef: Double; Bot: Double; Rig: Double; Top: Double; bCross: Integer; nMaxEnts: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndGetEntity (iEnt: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcWndGetEntByID (hLcWnd: IntPtr; Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcWndGetEntByIDH (hLcWnd: IntPtr; szId: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcWndGetEntByKey (hLcWnd: IntPtr; Key: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcWndEmulator (hLcWnd: IntPtr; Mode: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndMagnifier (hLcWnd: IntPtr; bOn: Integer; Width: Integer; Height: Integer; Zoom: Integer; Flags: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndHoverText (hLcWnd: IntPtr; szText: PWideChar; X: Integer; Y: Integer; Align: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndMessage (hLcWnd: IntPtr; szText: PWideChar; uType: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndCoordFromDrw (hLcWnd: IntPtr; Xdrw: Double; Ydrw: Double; pXwin: Pinteger; pYwin: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcWndCoordToDrw (hLcWnd: IntPtr; Xwin: Integer; Ywin: Integer; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcCoordDrwToWnd (hLcWnd: IntPtr; Xdrw: Double; Ydrw: Double; pXwnd: Pinteger; pYwnd: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcCoordWndToDrw (hLcWnd: IntPtr; Xwnd: Integer; Ywnd: Integer; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcFontGetFirst : IntPtr; stdcall; external 'Litecad64.dll';
Function lcFontGetNext (hFont: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcFontAddRes (szFontName: PWideChar; hModule: IntPtr; idResource: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcFontAddFile (szFontName: PWideChar; szFilename: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcFontAddBin (szFontName: PWideChar; hData: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcFontGetChar (hFont: IntPtr; CharCode: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcFontGetName (szFilename: PWideChar): PWideChar; stdcall; external 'Litecad64.dll';
Function lcProgressCreate (hLcWnd: IntPtr; W: Integer; H: Integer; szTitle: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcProgressSetText (szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcProgressStart (MinVal: Integer; MaxVal: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcProgressSetPos (Val: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcProgressInc : Integer; stdcall; external 'Litecad64.dll';
Function lcProgressDelete : Integer; stdcall; external 'Litecad64.dll';
Function lcQuadCreate : IntPtr; stdcall; external 'Litecad64.dll';
Function lcQuadDelete (hQuad: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcQuadSet (hQuad: IntPtr; x0: Double; y0: Double; x1: Double; y1: Double; x2: Double; y2: Double; x3: Double; y3: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcQuadTransXYtoUV (hQuad: IntPtr; X: Double; Y: Double; pU: Pdouble; pV: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcQuadTransUVtoXY (hQuad: IntPtr; U: Double; V: Double; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcQuadContains (hQuad: IntPtr; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcGridCreate : IntPtr; stdcall; external 'Litecad64.dll';
Function lcGridDelete (hGrid: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcGridSet (hGrid: IntPtr; X0: Double; Y0: Double; W: Double; H: Double; Nx: Integer; Ny: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcGridSetDest (hGrid: IntPtr; Ix: Integer; Iy: Integer; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcGridUpdate (hGrid: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcGridTrans (hGrid: IntPtr; X: Double; Y: Double; pXdest: Pdouble; pYdest: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcGridGetNode (hGrid: IntPtr; bDest: Integer; Ix: Integer; Iy: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcGridGetCell (hGrid: IntPtr; X: Double; Y: Double; pIx: Pinteger; pIy: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcGridSetView (hGrid: IntPtr; Mode: Integer; hLcWnd: IntPtr; ColLine: IntPtr; ColNode: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_Clear : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_FileLoad (szFileName: PWideChar; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_FileSave (szFileName: PWideChar; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_AddPoint (X: Double; Y: Double; Z: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_AddPoint2 (X: Double; Y: Double; Z: Double; szName: PWideChar; szDescr: PWideChar; iColor: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_LoadPoints (szFileName: PWideChar; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_DelDupPoints (Delta: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_DelPoint (hPnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_GetFirstPoint : IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_GetNextPoint (hPnt: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_AddTrian (hPnt1: IntPtr; hPnt2: IntPtr; hPnt3: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_DelTrian (hTrian: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_GetFirstTrian : IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_GetNextTrian (hTrian: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_NormTrians : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_Update : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_Triangulate : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_GenIsolines : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_BndClear : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_BndAuto (MaxDist: Double; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_BndAddPoint (hPnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_BndUpdate : Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_BndGetPoint (iPnt: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcTIN_BndFileSave (szFileName: PWideChar; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_GetZ (X: Double; Y: Double; pZ: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_InterLine (X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_InterGetPoint (iPnt: Integer; pX: Pdouble; pY: Pdouble; pZ: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcTIN_GetNearPoint (X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
